<resources>
    <string name="app_name">Evil Hangman</string>
    <string name="game_message_won">Well done!!! :^)</string>
    <string name="game_message_lost">You lost \'_|\'</string>
    <string name="game_message_input">Enter a letter</string>
    <string name="game_settings">Game settings</string>
    <string name="settings_mode_title">Game mode</string>
    <string name="settings_word_length_title">Word length</string>
    <string name="settings_guesses_title">Initial guesses</string>
    <string name="settings_mode_summary">The way the computer chooses a word</string>
    <string name="settings_word_length_summary">The amount of letters in a word</string>
    <string name="settings_guesses_summary">The amount incorrect guesses tolerable</string>
    <string name="popup_settings">Settings</string>
    <string name="popup_clear_highscores">Clear highscores</string>
    <string name="popup_new_game">New game</string>
    <string name="preference_mode">mode</string>
    <string name="preference_word_length">wordLength</string>
    <string name="preference_initial_guesses">initialGuesses</string>
    <string-array name="test_words">
        <item>bear</item>
        <item>boar</item>
        <item>deer</item>
        <item>duck</item>
        <item>hare</item>
    </string-array>
</resources>